# glue-hub

./: .gitignore  CMakeLists.txt  README.md  package-hub.sh  resources.qrc  style.qss
src/: downloadmanager.cpp  downloadmanager.h  gamecard.cpp  gamecard.h  gameinfo.cpp  gameinfo.h  gamerprofile.cpp  gamerprofile.h  hubwindow.cpp  hubwindow.h  main.cpp  profilechooser.cpp  profilechooser.h  profiledialog.cpp  profiledialog.h  repomanager.cpp  repomanager.h  setupdialog.cpp  setupdialog.h  thememanager.cpp  thememanager.h  updatechecker.cpp  updatechecker.h
themes/: ClassicLight.qss  Dark.qss  Light.qss
